@@ -1,5 +1,10 @@
 2008-11-06  Mike Krüger  <mike@icsharpcode.net>
 
+	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on code
+	templates.
+
+2008-11-06  Mike Krüger  <mike@icsharpcode.net>
+
 	* MonoDevelop.SourceEditor/EditActions.cs:
 	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixes some bugs with
 	code templates and auto insert brackets.
